src/tests/fixtures/user_error/WrongCaseGqlTag.ts.expected
-----------------
INPUT
----------------- 
/** @GQLField */
function field() {}

-----------------
OUTPUT
-----------------
src/tests/fixtures/user_error/WrongCaseGqlTag.ts:1:6 - error: Incorrect casing for Grats tag `@GQLField`. Use `@gqlField` instead.

1 /** @GQLField */
       ~~~~~~~~

